# memor-ai

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  inspector.py  package.json  pyproject.toml  scratch_ablation.py  scratch_counterfactual_ab.py  scratch_enrich_keyphrase.py  scratch_enrich_premise.py  scratch_eval_determinism.py  scratch_flashrank_latency.py  scratch_h1_candidacy.py  scratch_h1_distiller_sanity.py  scratch_h4_premise.py  scratch_latency_bench.py  scratch_leverb_premise.py  scratch_miss_autopsy.py  scratch_reaffirm_eval.py  scratch_redistill_eval.py  scratch_retrieval_gap.py  scratch_token_sweep.py
docs/plans/: 2026-06-10-vec-storage-bloat-fix.md  2026-06-15-distilled-aware-retrieval-design.md  2026-06-17-distillation-quality-research.md
memor/: cli.py  daemon.py  feedback.py  global_memories.py  hook_cli.py  hook_server.py  interfaces.py  project.py  query_complexity.py  recall.py  redact.py  service.py  session_context.py  supersession.py  temporal.py  tokencount.py  turn_metrics.py  types.py
memor/dashboard/: server.py
memor/distill/: distiller.py  extractive.py  schema.py
memor/embed/: api.py  local.py
memor/eval/: counterfactual.py  dataset.py  embed_benchmark.py  judge.py  runner.py
memor/ingest/: claude_code.py  documents.py
memor/llm/: anthropic.py  base.py  llama_cpp.py  openai_compat.py
memor/retrieve/: retriever.py
memor/store/: sqlite_store.py
memor/tui/: app.py
memorable/: cli.py  daemon.py  interfaces.py  types.py
memorable/distill/: distiller.py  extractive.py
memorable/embed/: fake.py
memorable/eval/: dataset.py  metrics.py  runner.py
memorable/llm/: base.py  (+1 more)
scripts/: bakeoff_distiller.py  postinstall.mjs
skill/: SKILL.md  recall.py
tests/: test_backfill_disputes.py  test_bakeoff_smoke.py  test_cli_smoke.py  test_counterfactual.py  test_counterfactual_keys.py  test_daemon.py  test_daemon_distiller_select.py  test_dashboard.py  test_dashboard_quality.py  test_dataset_builder.py  test_decay_typeaware.py  test_dimension_safety.py  test_disputes_store.py  test_distill_schema.py  test_distiller.py  test_embed.py  test_embed_benchmark.py  test_eval_ablation.py  test_eval_runner.py  test_eval_stratified.py  test_external_baselines.py  test_extractive.py  test_feedback.py  test_global_memories.py  test_hook.py  test_hook_server.py  test_hybrid_retrieval.py  test_ingest_claude_code.py  test_ingest_documents.py  test_install_hook.py  test_interfaces.py  test_judge.py  test_key_vectors.py  test_llama_cpp_backend.py  test_llm_grammar_compat.py  test_local_distiller.py  test_metrics.py  test_multi_agent_hook.py  test_negative_feedback.py  test_noise_filter.py  (+28 more)
(+28 files in other folders)
