[project]
name = "memor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "sqlite-vec>=0.1.6",
  "numpy>=1.26",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
memor = "memor.cli:app"

[tool.setuptools.packages.find]
include = ["memor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
