[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memor-cli"
version = "0.5.0"
description = "Measured memory for coding agents. Fire and forget — no API keys needed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Nimit Bhandari", email = "nimitbhandari17@gmail.com" },
]
keywords = ["memory", "agent", "claude", "embeddings", "coding-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "sqlite-vec>=0.1.6",
  "numpy>=1.26",
  "typer>=0.12",
  "httpx>=0.27",
  "tiktoken>=0.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "model2vec>=0.8",
]

[project.optional-dependencies]
api-embed = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/bnimit/memor-ai"
Repository = "https://github.com/bnimit/memor-ai"
Issues = "https://github.com/bnimit/memor-ai/issues"

[project.scripts]
memor = "memor.cli:app"
memor-hook = "memor.hook_cli:main"

[tool.setuptools.packages.find]
include = ["memor*"]

[tool.setuptools.package-data]
"memor.dashboard" = ["static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
